--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,19 +1,40 @@
 <p style="color: green"><%= notice %></p>
 
+<% has_author = false %>
+<% about_me = nil%>
+<% @abouts.each do |about| %>
+  <% if about.user_id == @article.user_id %>
+    <% has_author = true%>
+    <% about_me = about %>
+  <% end %>
+<% end %>
+
 
 <div class="card mb-3">
   <img src="" class="card-img-top" alt="">
   <div class="card-body">
     <h5 class="card-title"><%= @article.title %></h5>
+    <p class="card-text"><small class="text-muted">By <%= about_me.first_name %> <%= about_me.last_name %></small></p>
     <p class="card-text"><%= @article.body %></p>
-    <p class="card-text"><small class="text-muted">By <%=  %></small></p>
-    <p>possible about author</p>
-    <div>
-      <%= link_to "Back", articles_path, class:'btn btn-secondary' %>
-      <%= link_to "  Edit  ", edit_article_path(@article), class:'btn btn-secondary' %> 
-    </div>
-    <br>
-    <%= button_to "Delete this article", @article, method: :delete, class:'btn btn-dark' %>
+
+    <% if has_author == false %>
+      <p class="card-text"><small class="text-muted">By Anonymous</small></p>
+    <% else %>
+      <p class="card-text"><small class="text-muted"><%= about_me.first_name %> <%= about_me.last_name %> | <%= about_me.profession %> <br> <%= about_me.summary %>
+      </small></p>
+    <% end %>
+    <% if user_signed_in? && current_user.id == @article.user_id %>
+      <div>
+        <%= link_to "Back", root_path, class:'btn btn-secondary' %>
+        <%= link_to "  Edit  ", edit_article_path(@article), class:'btn btn-secondary' %> 
+      </div>
+      <br>
+      <%= button_to "Delete this article", @article, method: :delete, class:'btn btn-dark' %>
+    <% else %>
+      <div>
+        <%= link_to "Back", root_path, class:'btn btn-secondary' %>
+      </div>
+    <% end %>
   </div>
 </div>
 
