--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,24 +1,48 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Articles</h1>
-
-<div id="articles">
-  <% @articles.each do |article| %>
-    <% has_author = false %>
-    <% about_me = nil%>
-      <% @abouts.each do |about| %>
-        <% if about.user_id == article.user_id %>
-          <% has_author = true%>
-          <% about_me = about %>
-        <% end %>
-      <% end %>
-    <div class="card">
-      <h4 class="card-header"><%= article.title%></h4>
+<div class='full-container'>
+  <div class='left-container'>
+    <div class="card" style="width: 18rem;">
       <div class="card-body">
-        <h6 class="card-title">By <%= about_me.first_name %> <%= about_me.last_name %></h6>
-        <%= link_to "Show this article", article, class:'btn btn-secondary' %>
+        <h5 class="card-title">About Oceania</h5>
+        <a href="#" class="btn btn-primary">Click to read more</a>
       </div>
     </div>
     <br>
-  <% end %>
+    <div class="card" style="width: 18rem;">
+      <div>
+        <h4 class="card-header">Our authors</h5>
+      </div>
+      <% @abouts.each do |about| %>
+        <div class="card-body">
+          <h5 class="card-title"><%= about.first_name %> <%= about.last_name %></h5>
+          <h6 class="card-subtitle mb-2 text-muted"><%= about.profession %></h6>
+          <p class="card-text"><%= about.summary %></p>
+        </div>
+        <hr class="dropdown-divider">
+    <% end %>
+    </div>
+  </div>
+  <div class='right-container'>
+    <div id="articles">
+      <% @articles.each do |article| %>
+        <% has_author = false %>
+        <% about_me = nil%>
+          <% @abouts.each do |about| %>
+            <% if about.user_id == article.user_id %>
+              <% has_author = true%>
+              <% about_me = about %>
+            <% end %>
+          <% end %>
+        <div class="card">
+          <h4 class="card-header"><%= article.title%></h4>
+          <div class="card-body">
+            <h6 class="card-title">By <%= about_me.first_name %> <%= about_me.last_name %></h6>
+            <%= link_to "Show this article", article, class:'btn btn-secondary' %>
+          </div>
+        </div>
+        <br>
+      <% end %>
+    </div>
+  </div>
 </div>
