--- a/app/views/abouts/_form.html.erb
+++ b/app/views/abouts/_form.html.erb
@@ -11,24 +11,20 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :first_name, style: "display: block" %>
-    <%= form.text_field :first_name %>
+  <div class='mb-3'>
+    <%= form.text_field :first_name, class:"form-control", placeholder:'First Name' %>
   </div>
 
-  <div>
-    <%= form.label :last_name, style: "display: block" %>
-    <%= form.text_field :last_name %>
+  <div class='mb-3'>
+    <%= form.text_field :last_name, class:"form-control", placeholder:'Last Name' %>
   </div>
 
-  <div>
-    <%= form.label :profession, style: "display: block" %>
-    <%= form.text_field :profession %>
+  <div class='mb-3'>
+    <%= form.text_field :profession, class:"form-control", placeholder:'Profession' %>
   </div>
 
-  <div>
-    <%= form.label :summary, style: "display: block" %>
-    <%= form.text_area :summary %>
+  <div class='mb-3'>
+    <%= form.text_area :summary, class:"form-control", placeholder:'About me' %>
   </div>
 
   <div>
@@ -36,6 +32,6 @@
   </div>
 
   <div>
-    <%= form.submit %>
+    <%= form.submit class:'btn btn-secondary'%>
   </div>
 <% end %>
