--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -12,20 +12,17 @@
   <% end %>
 
   <div>
-    <%= form.label :title, style: "display: block" %>
-    <%= form.text_field :title %>
+    <%= form.text_field :title, class:'form-control', placeholder:'Article Title' %>
   </div>
-
+  <br>
   <div>
-    <%= form.label :body, style: "display: block" %>
-    <%= form.text_area :body %>
+    <%= form.text_area :body, class:'form-control', placeholder:'Article Title' %>
   </div>
-
+  <br>
   <div>
     <%= form.number_field :user_id, id: :article_user_id ,value:current_user.id, type: :hidden %>
   </div>
-
   <div>
-    <%= form.submit %>
+    <%= form.submit class:'btn btn-primary' %>
   </div>
 <% end %>
