--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>
+<h1 style="color:white">
   <% if current_user.about.nil? %>  
     <%= current_user.email %>
   <% else %>
@@ -10,7 +10,7 @@
 <div id="articles">
   <% @articles.each do |article| %>
     <% if current_user.id == article.user_id%>
-      <div class="card">
+      <div class="card bg-dark text-white">
         <h4 class="card-header"><%= article.title%></h4>
         <div class="card-body">
           <%= link_to "Show this article", article, class:'btn btn-secondary' %>
