--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,8 +1,13 @@
-<h1>New article</h1>
-
-<%= render "form", article: @article %>
-
 <br>
+
+<div class="card bg-dark text-white">
+  <div class="card-header">
+    New Article
+  </div>
+  <div class="card-body">
+    <%= render "form", article: @article %>
+  </div>
+</div>
 
 <div>
   <%= link_to "Back to articles", articles_path %>
